--- a/DevslopesSocial/Base.lproj/Main.storyboard
+++ b/DevslopesSocial/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +21,111 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UB9-Dr-g7w">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="h8n-uA-6ll">
+                                        <rect key="frame" x="113" y="28" width="150" height="94"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="I1C-Qa-CUd"/>
+                                    <constraint firstItem="h8n-uA-6ll" firstAttribute="centerX" secondItem="UB9-Dr-g7w" secondAttribute="centerX" id="NSN-uU-I2Z"/>
+                                    <constraint firstItem="h8n-uA-6ll" firstAttribute="centerY" secondItem="UB9-Dr-g7w" secondAttribute="centerY" id="Uqf-wJ-vUG"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AVl-Kr-rFf">
+                                <rect key="frame" x="0.0" y="592" width="375" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOp-27-06c">
+                                        <rect key="frame" x="8" y="8" width="359" height="59"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="1cf-Zi-sCt"/>
+                                    <constraint firstItem="NOp-27-06c" firstAttribute="top" secondItem="AVl-Kr-rFf" secondAttribute="top" constant="8" id="Kza-61-hth"/>
+                                    <constraint firstAttribute="bottom" secondItem="NOp-27-06c" secondAttribute="bottom" constant="8" id="blX-zE-67U"/>
+                                    <constraint firstItem="NOp-27-06c" firstAttribute="leading" secondItem="AVl-Kr-rFf" secondAttribute="leading" constant="8" id="fTx-s2-0GX"/>
+                                    <constraint firstAttribute="trailing" secondItem="NOp-27-06c" secondAttribute="trailing" constant="8" id="xML-QR-iHE"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lT-wQ-pTB">
+                                <rect key="frame" x="16" y="170" width="343" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="ig0-or-UZn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dgG-h1-UBy">
+                                <rect key="frame" x="113" y="230" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.35269182920455933" green="0.4413420557975769" blue="0.69439387321472168" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Npt-x9-H1P"/>
+                                    <constraint firstAttribute="width" constant="150" id="suo-lU-0u5"/>
+                                </constraints>
+                                <state key="normal" image="f"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="kXK-Rd-fjg">
+                                <rect key="frame" x="46" y="420" width="283" height="120"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email address" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mRh-Cq-RaJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="283" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fiU-Km-18C">
+                                        <rect key="frame" x="0.0" y="45" width="283" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rf5-af-kuN">
+                                        <rect key="frame" x="0.0" y="90" width="283" height="30"/>
+                                        <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="0.87" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UB9-Dr-g7w" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="4is-zd-VYG"/>
+                            <constraint firstItem="dgG-h1-UBy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="5pL-EV-YTv"/>
+                            <constraint firstItem="kXK-Rd-fjg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="73V-1l-u8M"/>
+                            <constraint firstItem="kXK-Rd-fjg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Dha-oc-thj"/>
+                            <constraint firstItem="1lT-wQ-pTB" firstAttribute="top" secondItem="UB9-Dr-g7w" secondAttribute="bottom" constant="20" id="ESu-54-g1v"/>
+                            <constraint firstAttribute="trailing" secondItem="AVl-Kr-rFf" secondAttribute="trailing" id="Ec5-Fl-1lg"/>
+                            <constraint firstItem="dgG-h1-UBy" firstAttribute="top" secondItem="1lT-wQ-pTB" secondAttribute="bottom" constant="40" id="LE4-g1-Knk"/>
+                            <constraint firstItem="1lT-wQ-pTB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="PZ2-NS-Zst"/>
+                            <constraint firstItem="kXK-Rd-fjg" firstAttribute="top" secondItem="dgG-h1-UBy" secondAttribute="bottom" constant="40" id="RBs-zo-Mbg"/>
+                            <constraint firstAttribute="trailing" secondItem="UB9-Dr-g7w" secondAttribute="trailing" id="Twe-nt-ilp"/>
+                            <constraint firstItem="AVl-Kr-rFf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bep-FU-9qZ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="AVl-Kr-rFf" secondAttribute="bottom" id="fYQ-wv-WQC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kXK-Rd-fjg" secondAttribute="trailing" constant="30" id="gva-Mt-6OF"/>
+                            <constraint firstItem="1lT-wQ-pTB" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="hNu-6e-meS"/>
+                            <constraint firstItem="UB9-Dr-g7w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xaf-ax-heh"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="devslopes-logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
